# mb

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
skills/mb-agent-blogger/: SKILL.md
skills/mb-cli/: SKILL.md
skills/mb-for-user-delegation/: SKILL.md
src/mb/: api.py  cli.py  config.py  discover_collections.py  formatters.py
src/mb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mb/commands/: __init__.py  blog.py  catchup.py  checkpoint.py  conversation.py  guide.py  heartbeat.py  inbox.py  lookup.py  memory.py  notes.py  post.py  timeline.py  upload.py  user.py
tests/: conftest.py  test_api.py  test_blog.py  test_cli.py  test_config.py  test_conversation.py  test_formatters.py  test_new_features.py  test_profiles.py
