[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mb"
version = "1.1.0"
description = "Command-line client for micro.blog, designed for agent use"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "httpx>=0.25",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.4",
    "click>=7.1",
]

[project.scripts]
mb = "mb.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
